# mmcso

./: .gitignore  CMakeLists.txt  README.md
bench/: CMakeLists.txt  mt_overlap.cpp
build_impi/: cmake_script.sh  load_dependencies.sh  remove_cmake_stuffs.sh
build_ompi/: cmake_script.sh  load_dependencies_coolmuc.sh  remove_old_cmake_stuff.sh
cmake/: ClangTidy.cmake  Warnings.cmake
experiments/: .gitignore  README.md  Readme.md  affinity_setup.sh
experiments/intra_inter_node_comm/: plot_overhead_hawk_sng.py  sng_inter_mtoverlap.job  sng_inter_mtoverlap_native.job  sng_intra_mtoverlap.job  sng_intra_mtoverlap_native.job
experiments/intra_inter_node_comm/coolmuc/: check_job_status_coolmuc.sh  coolmuc_ompi_internode_native_bench_compute.job  coolmuc_ompi_internode_native_bench_mem.job  coolmuc_ompi_internode_offload_bench_compute.job  coolmuc_ompi_internode_offload_bench_mem.job  coolmuc_ompi_intranode_native_bench_compute.job  coolmuc_ompi_intranode_native_bench_mem.job  coolmuc_ompi_intranode_offload_bench_compute.job  coolmuc_ompi_intranode_offload_bench_mem.job  test_coolmuc_internode_offload_bench_compute.job
experiments/intra_inter_node_comm/hawk/: hawk-r000.mt-2-4-default.csv  hawk-r000.mt-2-4-mem-offload.csv  hawk-r000.mt-2-8-mem-offload.csv  hawk-r001.mt-2-16-mem-default.csv  hawk-r001.mt-2-16-offload.csv  hawk-r001.mt-2-4-mem-default.csv  hawk-r001.mt-2-8-mem-default.csv  hawk-r002.mt-2-16-default.csv  hawk-r002.mt-2-4-mem-offload.csv  hawk-r002.mt-2-8-mem-default.csv  hawk-r003.mt-2-16-default.csv  hawk-r003.mt-2-16-mem-default.csv  hawk-r003.mt-2-16-offload.csv  hawk-r003.mt-2-4-default.csv  hawk-r003.mt-2-4-mem-default.csv  hawk-r003.mt-2-4-offload.csv  hawk-r004.mt-2-16-default.csv  hawk-r004.mt-2-16-mem-default.csv  hawk-r004.mt-2-16-mem-offload.csv  hawk-r004.mt-2-8-mem-offload.csv  hawk-r005.mt-2-16-default.csv  hawk-r005.mt-2-16-mem-offload.csv  hawk-r005.mt-2-16-offload.csv  hawk-r005.mt-2-8-default.csv  hawk-r005.mt-2-8-offload.csv  hawk-r006.mt-2-16-mem-default.csv  hawk-r006.mt-2-16-mem-offload.csv  hawk-r006.mt-2-8-default.csv  hawk-r007.mt-2-16-mem-default.csv  hawk-r007.mt-2-16-mem-offload.csv  hawk-r007.mt-2-8-default.csv  hawk-r007.mt-2-8-mem-default.csv  hawk-r007.mt-2-8-mem-offload.csv  hawk-r007.mt-2-8-offload.csv  hawk-r008.mt-2-16-mem-offload.csv  hawk-r008.mt-2-16-offload.csv  hawk-r009.mt-2-16-default.csv  hawk-r009.mt-2-16-offload.csv  hawk-r010.mt-2-16-default.csv  hawk-r010.mt-2-16-mem-offload.csv  (+127 more)
experiments/intra_inter_node_comm/output/: inter_node_native_mtoverlap.4903551.out  intra_node_mtoverlap.4899869.err  intra_node_mtoverlap.4899869.out  intra_node_mtoverlap.4899931.err  intra_node_mtoverlap.4899931.out  intra_node_mtoverlap.4903539.err  intra_node_mtoverlap.4903539.out  intra_node_native__mtoverlap.4899870.err  intra_node_native__mtoverlap.4899870.out  intra_node_native_mtoverlap.4903548.out
experiments/intra_inter_node_comm/result/: native_inter_node.csv  native_intra_node.csv  offload_inter_node.csv  offload_intra_node.csv
experiments/intra_inter_node_comm/sng/: plot_overhead.py  plot_overhead_sng.py  plot_speedup.py  plot_speedup_sng.py  sng_inter_native_compute_mtovlap.job  sng_inter_native_mem_mtovlap.job  sng_inter_offload_compute_mtovlap.job  sng_inter_offload_mem_mtovlap.job  sng_intra_mtoverlap.job  sng_intra_mtoverlap_native.job  sng_intra_native_compute_mtovlap.job  sng_intra_native_mem_mtovlap.job  sng_intra_offload_compute_mtovlap.job  sng_intra_offload_mem_mtovlap.job  (+1 more)
experiments/osu-micro-benchmarks/osu-micro-benchmarks-7.5.1/c/xccl/collective/: Makefile  Makefile.am  Makefile.in  osu_xccl_allgather.c  osu_xccl_allreduce.c  osu_xccl_alltoall.c  osu_xccl_bcast.c  osu_xccl_reduce.c  osu_xccl_reduce_scatter.c
experiments/p2p_async/: make_plots.sh  plot_overhead_hawk_sng.py
src/: CMakeLists.txt  array_request_manager.h  atomic_queue.h  config.h  lambda_wrapper.h  locked_queue.h  mpi_command.h  mpi_impl.cpp  mpi_interposition.cpp  mpsc_queue.h  offload.h  print_sizes.cpp  type_erasure.h  util.cpp  variant_type.h  wait_strategy.h
src/mpi/: mpi_interposition.cpp  mpi_interposition.h  mpi_win.cpp
src/mpi2/: mpi_c2f2c.cpp  mpi_collective.cpp  mpi_comm.cpp  mpi_file.cpp  mpi_group.cpp  mpi_info.cpp  mpi_interposition.cpp  mpi_one_sided.cpp  mpi_p2p.cpp  mpi_partitioned.cpp  mpi_request_status.cpp  mpi_topo.cpp  mpi_type.cpp
src/queue/: atomic_queue.h  locked_queue.h  mpsc_queue.h
tools/: affinity.sh  extract_clang.py  run.sh
utils/: plot.py  plot_overhead.py  plot_overhead_compute_intra_inter_comm.py  plot_overhead_intra_inter_node_comm.py  plot_overlap.py  plot_overlap_inter_inter_node_comm.py  plot_speedup.py  run-intelmpi.sh  run-openmpi.sh
(+1773 files in other folders)
